<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_welcome">

    <fragment
        android:id="@+id/navigation_welcome"
        android:name="com.example.arcane.ui.welcome.WelcomeFragment"
        android:label="Welcome"
        tools:layout="@layout/fragment_welcome_page" />

    <fragment
        android:id="@+id/navigation_login"
        android:name="com.example.arcane.ui.login.LoginFragment"
        android:label="@string/login_title"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/navigation_create_account"
        android:name="com.example.arcane.ui.login.CreateAccountFragment"
        android:label="Create Account"
        tools:layout="@layout/fragment_create_account" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.arcane.ui.events.EventsRouterFragment"
        tools:layout="@layout/fragment_events_router" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.arcane.ui.qrcode.ScanRouterFragment"
        android:label="@string/title_scan"
        tools:layout="@layout/fragment_scan_router" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.arcane.ui.notifications.NotificationsFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_create_event"
        android:name="com.example.arcane.ui.createevent.CreateEventFragment"
        android:label="Create Event"
        tools:layout="@layout/fragment_create_event" />

    <fragment
        android:id="@+id/navigation_edit_event"
        android:name="com.example.arcane.ui.createevent.EditEventFragment"
        android:label="Edit Event"
        tools:layout="@layout/fragment_create_event">
        <argument
            android:name="eventId"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/navigation_qr_code"
        android:name="com.example.arcane.ui.qrcode.QrCodeFragment"
        android:label="Event QR Code"
        tools:layout="@layout/fragment_qr_code">
        <argument
            android:name="eventId"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/navigation_global_events"
        android:name="com.example.arcane.ui.events.GlobalEventsFragment"
        android:label="User Global Events"
        tools:layout="@layout/fragment_events" />

    <fragment
        android:id="@+id/navigation_event_detail"
        android:name="com.example.arcane.ui.events.EventDetailFragment"
        android:label="Event Details"
        tools:layout="@layout/fragment_event_detail">
        <argument
            android:name="eventId"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/navigation_entrants"
        android:name="com.example.arcane.ui.events.EntrantsFragment"
        android:label="Entrants"
        tools:layout="@layout/fragment_entrants">
        <argument
            android:name="eventId"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/navigation_entrants_map"
        android:name="com.example.arcane.ui.events.EntrantsMapFragment"
        android:label="Entrants Map"
        tools:layout="@layout/fragment_entrants_map">
        <argument
            android:name="eventId"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/navigation_browse_images"
        android:name="com.example.arcane.ui.gallery.BrowseImagesFragment"
        android:label="Gallery"
        tools:layout="@layout/fragment_browse_images" />

    <fragment
        android:id="@+id/navigation_all_users"
        android:name="com.example.arcane.ui.users.AllUsersFragment"
        android:label="All Users"
        tools:layout="@layout/fragment_all_users" />

    <fragment
        android:id="@+id/navigation_all_notifications"
        android:name="com.example.arcane.ui.notifications.AllNotificationsFragment"
        android:label="All Notifications"
        tools:layout="@layout/fragment_all_notifications" />

    <fragment
        android:id="@+id/navigation_edit_profile"
        android:name="com.example.arcane.ui.notifications.EditProfileFragment"
        android:label="Edit Profile"
        tools:layout="@layout/fragment_edit_profile" />

</navigation>