...
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/search_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/primary_nav_button"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="Go"
            android:paddingStart="16dp"
            android:paddingEnd="16dp" />
    </LinearLayout>
...
