...
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toggle_geolocation_container" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/logoutButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:textColor="@color/on_brand"
            android:backgroundTint="@color/brand_primary"
            android:layout_marginTop="32dp"
...
